fix: se agrega controlador
